# AstronautGame

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt
Dependencies/include/: Events.hpp  Logger.hpp  Types.h
Dependencies/src/: Types.cpp
Dependencies/src/lm/: lm.cpp
app/: MyApp.h  main.cpp
audio/: CmakeLists.txt
audio/Dependencies/libsndfile/: CMakeLists.txt
audio/Dependencies/openal/: CMakeLists.txt
audio/include/: AudioSource.h  AudioSystem.h
audio/src/: AudioSource.cpp  AudioSystem.cpp
glender/: CMakeLists.txt
glender/Dependencies/assimp/: CMakeLists.txt
glender/Dependencies/freetype/objs/: freetype.dll.recipe  freetype.exp  freetype.ilk  freetype.lib
glender/Dependencies/imgui/: CmakeLists.txt
glender/Dependencies/include/glad/: gl.h
glender/Dependencies/src/glad/: gl.c
glender/include/: App.h  Camera.h  Entity.h  Framebuffer.h  Lighting.h  Logging.h  Material.h  Mesh.h  Renderer.h  Scene.h  Shader.h  Skeleton.h  Text.h  Texture.h  Window.h
glender/shaders/: Default.frag  Default.geom  Default.vert  Quad.vert  Skinned.vert
glender/shaders/PostProcessing/: BasicPostEffects.frag
glender/shaders/Shading/: BlinnPhong.frag  PBR.frag
glender/shaders/Shadows/: CubeShadowMap.frag  CubeShadowMap.geom  CubeShadowMap.vert  DirectShadowMap.frag  DirectShadowMap.vert  DirectShadowRemap.frag  DirectShadowRemap.vert  PointShadowRemap.frag  SpotShadowRemap.frag
glender/shaders/Skyboxes/: BRDF.frag  DiffuseIrradiance.frag  Irradiance.geom  Irradiance.vert  Skybox.frag  Skybox.vert  SpecularIrradiance.frag
glender/shaders/Text/: FontSdf.frag  TextRender.frag
glender/src/: App.cpp  Camera.cpp  Entity.cpp  Framebuffer.cpp  Lighting.cpp  Logging.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Skeleton.cpp  Text.cpp  Texture.cpp  Window.cpp
physixx/: CMakeLists.txt
physixx/include/: PhysixxBody.h  PhysixxSystem.h
physixx/src/: PhysixxBody.cpp  PhysixxSystem.cpp
